[package]
name = "nrf52840_mdk_usb_dongle"
version = "0.1.0"
authors = ["Yihui Xiong <yihui.xiong@hotmail.com>"]
build = "build.rs"
edition = "2018"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
components = { path = "../../tock/boards/components" }
cortexm4 = { path = "../../tock/arch/cortex-m4" }
capsules = { path = "../../tock/capsules" }
kernel = { path = "../../tock/kernel" }
nrf52840 = { path = "../../tock/chips/nrf52840" }
nrf52_components = { path = "../../tock/boards/nordic/nrf52_components" }
